# giotto-llm

./: .buildinfo  .gitignore  Makefile  README.md  genindex.html  giotto_llm.bucket.html  giotto_llm.causal_lm.html  giotto_llm.consts.html  giotto_llm.data.ConversationDataset.html  giotto_llm.data.Dataset.html  giotto_llm.data.html  giotto_llm.data.series_to_oai_causal_lm.html  giotto_llm.data.series_to_oai_vision.html  giotto_llm.data.task_to_image.html  giotto_llm.data.task_to_oai_causal_lm.html  giotto_llm.data.task_to_oai_vision.html  giotto_llm.finetuning.html  giotto_llm.generate_messages.html  giotto_llm.html  giotto_llm.logs.get_named_logger.html  giotto_llm.logs.html  giotto_llm.online_fine_tuning.html  giotto_llm.parallelize.html  giotto_llm.plot.html  giotto_llm.prompts.html  giotto_llm.reader.ReaderMany.html  giotto_llm.reader.ReaderManyOnlineFinetuning.html  giotto_llm.reader.ReaderOneByOne.html  giotto_llm.reader.ReaderOneOnlineFinetuning.html  giotto_llm.reader.ReaderPickle.html  giotto_llm.reader.html  giotto_llm.transforms.Transforms.html  giotto_llm.transforms.backtransform_test_output.html  giotto_llm.transforms.html  giotto_llm.transforms.transform_task.html  giotto_llm.type_aliases.html  giotto_llm.utils.RepeatSampler.html  giotto_llm.utils.get_half_precision_dtype.html  giotto_llm.utils.html  giotto_llm.utils.is_launched_with_torchrun.html  (+14 more)
_sources/: giotto_llm.bucket.rst.txt  giotto_llm.causal_lm.rst.txt  giotto_llm.consts.rst.txt  giotto_llm.data.ConversationDataset.rst.txt  giotto_llm.data.Dataset.rst.txt  giotto_llm.data.rst.txt  giotto_llm.data.series_to_oai_causal_lm.rst.txt  giotto_llm.data.series_to_oai_vision.rst.txt  giotto_llm.data.task_to_image.rst.txt  giotto_llm.data.task_to_oai_causal_lm.rst.txt  giotto_llm.data.task_to_oai_vision.rst.txt  giotto_llm.finetuning.rst.txt  giotto_llm.generate_messages.rst.txt  giotto_llm.logs.get_named_logger.rst.txt  giotto_llm.logs.rst.txt  giotto_llm.online_fine_tuning.rst.txt  giotto_llm.parallelize.rst.txt  giotto_llm.plot.rst.txt  giotto_llm.prompts.rst.txt  giotto_llm.reader.ReaderMany.rst.txt  giotto_llm.reader.ReaderManyOnlineFinetuning.rst.txt  giotto_llm.reader.ReaderOneByOne.rst.txt  giotto_llm.reader.ReaderOneOnlineFinetuning.rst.txt  giotto_llm.reader.ReaderPickle.rst.txt  giotto_llm.reader.rst.txt  giotto_llm.rst.txt  giotto_llm.transforms.Transforms.rst.txt  giotto_llm.transforms.backtransform_test_output.rst.txt  giotto_llm.transforms.rst.txt  giotto_llm.transforms.transform_task.rst.txt  giotto_llm.type_aliases.rst.txt  giotto_llm.utils.RepeatSampler.rst.txt  giotto_llm.utils.get_half_precision_dtype.rst.txt  giotto_llm.utils.is_launched_with_torchrun.rst.txt  giotto_llm.utils.is_tf32_supported.rst.txt  giotto_llm.utils.rst.txt  giotto_llm.utils.split_single_task_by_test.rst.txt  giotto_llm.utils.split_tasks_by_test.rst.txt  giotto_llm.utils.write_json.rst.txt  giotto_llm.validation.rst.txt  (+3 more)
examples/: llama1b_online_finetuning_tutorial.ipynb  playground.ipynb  test_inference.ipynb
giotto_llm/: consts.py  data.py  selection.py  transforms.py  type_aliases.py  wrapper.py
giotto_llm/causal_lm/: minimal_tokenizer.json  models.py
giotto_llm/finetuning/: prune.py
giotto_llm/multimodal/: molmo.py
giotto_llm/online_fine_tuning/: __main__.py  args.py  utils.py  (+2 more)
training_code/: arc_loader.py  run_evaluation_Llama-rearc_with_ttt.py
(+14 files in other folders)
